<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstActivity"
    android:background="#DFF0FE"
    android:orientation="vertical">


    <TextView
        android:layout_margin="30dp"
        android:text="@string/enter_3_names"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"
        />
    <EditText
        android:id="@+id/editName1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zain"
        android:textAlignment="center"
        android:layout_margin="20dp"
        />
    <EditText
        android:id="@+id/editName4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sadia"
        android:textAlignment="center"
        android:layout_margin="20dp"
        />
    <EditText
        android:id="@+id/editName2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usama"
        android:textAlignment="center"
        android:layout_margin="20dp"
        />
    <EditText
        android:id="@+id/editName3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saleha"
        android:textAlignment="center"
        android:layout_margin="20dp"
        />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="260dp"

        android:background="@drawable/customize_button"
        android:onClick="btnStartClick"
        android:text="@string/start_game"
        android:textColor="#FFFFFF" />




</LinearLayout>
